--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="cancel">取消</string>
     <string name="confirm">确定</string>
     <string name="loading">加载中...</string>
+    <string name="timeout_error">网络连接超时，请检查您的网络状态，稍后重试！</string>
+    <string name="connect_error">网络连接异常，请检查您的网络，稍后重试！</string>
+    <string name="unknown_host_error">服务器异常，请稍后重试！</string>
+    <string name="null_pointer_error">空指针异常</string>
+    <string name="ssl_error">证书校验失败</string>
+    <string name="parse_error">解析错误</string>
+    <string name="unknown_error">未知错误</string>
 </resources>
