--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,13 +1,20 @@
 <resources>
     <string name="app_name">Public</string>
-    <string name="cancel">取消</string>
-    <string name="confirm">确定</string>
-    <string name="loading">加载中...</string>
-    <string name="timeout_error">网络连接超时，请检查您的网络状态，稍后重试！</string>
-    <string name="connect_error">网络连接异常，请检查您的网络，稍后重试！</string>
-    <string name="unknown_host_error">服务器异常，请稍后重试！</string>
-    <string name="null_pointer_error">空指针异常</string>
-    <string name="ssl_error">证书校验失败</string>
-    <string name="parse_error">解析错误</string>
-    <string name="unknown_error">未知错误</string>
+    <string name="common_cancel">取消</string>
+    <string name="common_confirm">确定</string>
+    <string name="common_loading">加载中...</string>
+    <string name="common_timeout_error">网络连接超时，请检查您的网络状态，稍后重试！</string>
+    <string name="common_connect_error">网络连接异常，请检查您的网络，稍后重试！</string>
+    <string name="common_unknown_host_error">服务器异常，请稍后重试！</string>
+    <string name="common_null_pointer_error">空指针异常</string>
+    <string name="common_ssl_error">证书校验失败</string>
+    <string name="common_parse_error">解析错误</string>
+    <string name="common_unknown_error">未知错误</string>
+    <string name="common_next">下一步</string>
+    <string name="common_save">保存</string>
+    <string name="common_delete">删除</string>
+    <string name="common_previous">上一步</string>
+    <string name="common_back">返回</string>
+
+
 </resources>
