添加工具类

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KotlinMvvMDemo</string>
+    <string name="classify_type_rate">类型：%s/%s分</string>
 </resources>
